Arrays.asList nicht mehr verwenden